--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "theme_color": "#f69435",
     "background_color": "#f69435",
     "display": "standalone",
-    "scope": "/",
-    "start_url": "/",
+    "scope": "https://ukkpower.github.io/Interactive-Frontend-Development-Milestone-Project/",
+    "start_url": "https://ukkpower.github.io/Interactive-Frontend-Development-Milestone-Project/",
     "name": "CI Memory Game",
     "app_name": "CI Memory Game",
     "short_name": "CI Mem",
